--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MichaelGong/generator-vuetemplate.git"
+  },
   "keywords": [
     "yeoman-generator"
   ],
   "author": "MichaelGong",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/MichaelGong/generator-vuetemplate/issues"
+  },
+  "homepage": "https://github.com/MichaelGong/generator-vuetemplate",
   "dependencies": {
     "chalk": "^2.0.1",
     "mkdirp": "^0.5.1",
